api/swimos_form/src/tests/derive/form/newtype_enum.stderr
error: Unrecognized attribute for 'form'.
 --> src/tests/derive/form/newtype_enum.rs:5:12
  |
5 |     #[form(newtype)]
  |            ^^^^^^^
